objects/LLC_BI__Tier__c.object
<CustomObject>
    <description>This object stores individual tier information. A collection of tiers make up a deposit rate structure.</description>
    <fields>
        <fullName>LLC_BI__Deposit_Rate_Structure__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This optional lookup field references the parent deposit rate structure.</description>
        <label>Deposit Rate Structure</label>
        <referenceTo>LLC_BI__Deposit_Rate_Structure__c</referenceTo>
        <relationshipLabel>Tiers</relationshipLabel>
        <relationshipName>Tiers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__End_Days__c</fullName>
        <description>This optional number field houses the end date in days for this tier.</description>
        <label>End Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__High_Balance__c</fullName>
        <description>This optional currency field houses the maximum dollar amount of this tier.</description>
        <label>High Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Interest_Rate__c</fullName>
        <description>This optional percentage field houses the interest rate for this tier.</description>
        <label>Interest Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Low_Balance__c</fullName>
        <description>This optional currency field houses the minimum dollar amount of this tier.</description>
        <label>Low Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Relationship_Grade__c</fullName>
        <description>This optional picklist associates this deposit rate structure with a particular relationship grade.</description>
        <label>Relationship Grade</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Start_Days__c</fullName>
        <description>This optional number field houses the start date in days for this tier.</description>
        <label>Start Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated, the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. When importing data into nCino, the field can also be used to efficiently associate related records without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Rate_Override__c</fullName>
        <label>Rate Override</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10 BPS</fullName>
                </value>
                <value>
                    <fullName>25 BPS</fullName>
                </value>
                <value>
                    <fullName>35 BPS</fullName>
                </value>
                <value>
                    <fullName>50 BPS</fullName>
                </value>
                <value>
                    <fullName>100 BPS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Tier</label>
    <nameField>
        <label>Tier Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tiers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>